force-app/main/default/objects/X3rd_Party_Contract_Service__c/X3rd_Party_Contract_Service__c.object-meta.xml
<CustomObject>
    <label>3rd Party Contracted Product / Service</label>
    <nameField>
        <displayFormat>3rd-{0000}</displayFormat>
        <label>3rd Party ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3rd Party Contracted Products / Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>