force-app/main/default/objects/X3rd_Party_Contract_Service__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>3rd Party Contracted Products / Services (Account)</relationshipLabel>
    <relationshipName>X3rd_Party_Contract_Service</relationshipName>
    <type>Lookup</type>
</CustomField>