force-app/main/default/objects/X3rd_Party_Contract_Service__c/fields/Integration_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Integration_Partner_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Integration Partner Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Integration Partner does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Integration Partner Accounts, Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Associated Customers</relationshipLabel>
    <relationshipName>X3rd_Party_Contracted_Products_Services</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>