force-app/main/default/objects/X3rd_Party_Contract_Service__c/fields/Integration_Partner_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Partner_Account_Id__c</fullName>
    <formula>Integration_Partner_Account__r.Id</formula>
    <label>Integration Partner Account Id</label>
    <type>Text</type>
</CustomField>