force-app/main/default/objects/X3rd_Party_Contract_Service__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>3rd Party Contracted Products / Services</relationshipLabel>
    <relationshipName>X3rd_Party_Contracted_Products_Services</relationshipName>
    <type>Lookup</type>
</CustomField>