force-app/main/default/objects/X3rd_Party_Contract_Service__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dispatch Provider</fullName>
            </value>
            <value>
                <fullName>Fuel Tax</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Routing Software</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Reseller - Hardware</fullName>
            </value>
            <value>
                <fullName>Reseller - Software</fullName>
            </value>
            <value>
                <fullName>Reseller - Partner</fullName>
            </value>
            <value>
                <fullName>Data Share</fullName>
            </value>
            <value>
                <fullName>Service Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>