force-app/main/default/objects/X3rd_Party_Contract_Service__c/fields/Previous_Account__c.field-meta.xml
<CustomField>
    <fullName>Previous_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>3rd Party Contracted Products / Services (Previous Account)</relationshipLabel>
    <relationshipName>X3rd_Party_Contracted_Products_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>