force-app/main/default/objects/X3rd_Party_Contract_Service__c/fields/Product_Service1__c.field-meta.xml
<CustomField>
    <fullName>Product_Service1__c</fullName>
    <label>Product / Service - Old</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>465q Scanner</fullName>
            </value>
            <value>
                <fullName>AccessPlus</fullName>
            </value>
            <value>
                <fullName>ATLine</fullName>
            </value>
            <value>
                <fullName>Centerline</fullName>
            </value>
            <value>
                <fullName>CISiXp</fullName>
            </value>
            <value>
                <fullName>Collision Avoidance</fullName>
            </value>
            <value>
                <fullName>e-BusinessiXp</fullName>
            </value>
            <value>
                <fullName>FMSiXp</fullName>
            </value>
            <value>
                <fullName>IES</fullName>
            </value>
            <value>
                <fullName>IES Mobile</fullName>
            </value>
            <value>
                <fullName>iXp - Integration X Platform</fullName>
            </value>
            <value>
                <fullName>Lane Departure</fullName>
            </value>
            <value>
                <fullName>LoadMaster (Character)</fullName>
            </value>
            <value>
                <fullName>LoadMaster Enterprise (JAVA)</fullName>
            </value>
            <value>
                <fullName>MMSiXp</fullName>
            </value>
            <value>
                <fullName>OnRoute</fullName>
            </value>
            <value>
                <fullName>PowerSuite</fullName>
            </value>
            <value>
                <fullName>QFlow</fullName>
            </value>
            <value>
                <fullName>Roll Over Sensor</fullName>
            </value>
            <value>
                <fullName>TDPS2000</fullName>
            </value>
            <value>
                <fullName>Tire Monitoring</fullName>
            </value>
            <value>
                <fullName>TL2000</fullName>
            </value>
            <value>
                <fullName>TMWSuite</fullName>
            </value>
            <value>
                <fullName>Truckmate</fullName>
            </value>
            <value>
                <fullName>TTS</fullName>
            </value>
            <value>
                <fullName>WinStakeiXp</fullName>
            </value>
            <value>
                <fullName>Asset Maintenance - Windows</fullName>
            </value>
            <value>
                <fullName>Asset Maintenance - AS400</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>