force-app/main/default/objects/X3rd_Party_Contract_Service__c/fields/Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Product_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product / Service</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Product does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Competitor_Products__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Integration_Partner_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Competitor_Products__c</referenceTo>
    <relationshipLabel>3rd Party Contracted Products / Services</relationshipLabel>
    <relationshipName>X3rd_Party_Contracted_Products_Services</relationshipName>
    <type>Lookup</type>
</CustomField>