force-app/main/default/objects/X3rd_Party_Contract_Service__c/fields/X3rd_Party__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party__c</fullName>
    <label>3rd Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accord</fullName>
            </value>
            <value>
                <fullName>Add-On Systems</fullName>
            </value>
            <value>
                <fullName>Affiliated Computer Services/RapidLog(QHOS)</fullName>
            </value>
            <value>
                <fullName>Affiliated Computer Services/Trippak(Scanning)</fullName>
            </value>
            <value>
                <fullName>ATAdvantage</fullName>
            </value>
            <value>
                <fullName>Axon Truck Software</fullName>
            </value>
            <value>
                <fullName>BCS</fullName>
            </value>
            <value>
                <fullName>Bendix</fullName>
            </value>
            <value>
                <fullName>Bolt Systems</fullName>
            </value>
            <value>
                <fullName>CAMS</fullName>
            </value>
            <value>
                <fullName>Carrier Logistics</fullName>
            </value>
            <value>
                <fullName>Cheetah</fullName>
            </value>
            <value>
                <fullName>Choice Technologies</fullName>
            </value>
            <value>
                <fullName>CH Robinson</fullName>
            </value>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Comdata</fullName>
            </value>
            <value>
                <fullName>Computer Support Inc.</fullName>
            </value>
            <value>
                <fullName>Creative Systems</fullName>
            </value>
            <value>
                <fullName>Daffron</fullName>
            </value>
            <value>
                <fullName>Daily Scheduled</fullName>
            </value>
            <value>
                <fullName>Descartes</fullName>
            </value>
            <value>
                <fullName>Dispatching Solutions</fullName>
            </value>
            <value>
                <fullName>Dispatching Solutions Inc.</fullName>
            </value>
            <value>
                <fullName>DPS</fullName>
            </value>
            <value>
                <fullName>EatonVORAD</fullName>
            </value>
            <value>
                <fullName>EBE Technologies</fullName>
            </value>
            <value>
                <fullName>Fittipaldi</fullName>
            </value>
            <value>
                <fullName>FiveCubits (fka Varipro)</fullName>
            </value>
            <value>
                <fullName>IDSC</fullName>
            </value>
            <value>
                <fullName>In-House / Home Grown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>