force-app/main/default/objects/X3rd_Party_Contract_Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Service1__c</columns>
    <columns>X3rd_Party__c</columns>
    <columns>Partner_Type__c</columns>
    <columns>Integration_Partner_Account__c</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>